--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://10.10.144.101:4000/tcmdb
+spring.datasource.url=jdbc:mysql://rm-2ze3vqs0e7235u36jvo.mysql.rds.aliyuncs.com:3306/tradingarea?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=ROOT@1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
